[gd_scene load_steps=15 format=3 uid="uid://cspf663x1qj7n"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_01suh"]
[ext_resource type="Texture2D" uid="uid://bpdyc720v6dtj" path="res://scenes/ui/pause_menu/assets/img/icon_play.png" id="1_31153"]
[ext_resource type="Texture2D" uid="uid://b0f6oqu2u7e5l" path="res://scenes/ui/pause_menu/assets/img/icon_exit.png" id="2_ftl0y"]
[ext_resource type="Texture2D" uid="uid://4iqxi4lov6c8" path="res://scenes/ui/pause_menu/assets/img/icon_play_hover.png" id="2_o1ycw"]
[ext_resource type="Texture2D" uid="uid://4gvo0sl1b24g" path="res://scenes/ui/pause_menu/assets/img/slider_grabber_default.png" id="3_xncdn"]
[ext_resource type="Texture2D" uid="uid://bjemxwj3w78qd" path="res://scenes/ui/pause_menu/assets/img/slider_grabber_selected.png" id="4_setcr"]
[ext_resource type="FontFile" uid="uid://xt3367pemlf5" path="res://global/resources/fonts/Ordin.otf" id="4_xdbfa"]
[ext_resource type="Texture2D" uid="uid://c08mwvqpbowik" path="res://scenes/ui/pause_menu/assets/img/slider.png" id="5_jv1bc"]
[ext_resource type="Script" path="res://scenes/ui/pause_menu/audio_slider.gd" id="6_ex4g8"]
[ext_resource type="Texture2D" uid="uid://bgrfyu4sq0rr2" path="res://scenes/ui/pause_menu/assets/img/icon_exit_hover.png" id="8_iurou"]

[sub_resource type="LabelSettings" id="LabelSettings_rh01w"]
font = ExtResource("4_xdbfa")
font_size = 32
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nt1pq"]
texture = ExtResource("5_jv1bc")
texture_margin_left = 64.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o73p7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vmpt"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01suh")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.580392)

[node name="play_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -100.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("1_31153")
texture_hover = ExtResource("2_o1ycw")

[node name="music" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -57.0
offset_right = 79.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Music
"
label_settings = SubResource("LabelSettings_rh01w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="music_slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -13.0
offset_right = 64.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_xncdn")
theme_override_icons/grabber_highlight = ExtResource("4_setcr")
theme_override_icons/grabber_disabled = ExtResource("3_xncdn")
theme_override_styles/slider = SubResource("StyleBoxTexture_nt1pq")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_o73p7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_0vmpt")
max_value = 1.0
step = 0.001
ticks_on_borders = true
script = ExtResource("6_ex4g8")
bus_name = "music"

[node name="sfx" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
text = "Sfx"
label_settings = SubResource("LabelSettings_rh01w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 52.0
offset_right = 64.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_xncdn")
theme_override_icons/grabber_highlight = ExtResource("4_setcr")
theme_override_icons/grabber_disabled = ExtResource("3_xncdn")
theme_override_styles/slider = SubResource("StyleBoxTexture_nt1pq")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_o73p7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_0vmpt")
max_value = 1.0
step = 0.001
ticks_on_borders = true
script = ExtResource("6_ex4g8")
bus_name = "sfx"

[node name="exit_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 84.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("2_ftl0y")
texture_hover = ExtResource("8_iurou")

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="music_slider" to="music_slider" method="_on_value_changed"]
[connection signal="value_changed" from="sfx_slider" to="sfx_slider" method="_on_value_changed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
